
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2016.10.2[/b]:
-Reduced drawing lag.

Version [b]2016.9.12[/b]:
-Registry button works better now.

Version [b]2016.8.28[/b]:
-Fixed an offsets bug in SLP view when browsing units.
-Some new info about graphics.

Version [b]2016.8.7[/b]:
-Restored the grid layout more or less.
-Able to read a game version from July 1998.
-SLP view takes display angle into account. <- Some angles broke.

Version [b]2016.3.6[/b]:
-1:1 unit paste fixed. Was sequential for some reason.
-Exist and wipe out unit buttons use proper civilization.
-Reselection when relisting is optional now.
-The good old-fashioned white background combo boxes are making their comeback too!

Version [b]2016.3.2[/b]:
-SLP view now tolerates incorrect graphic data.
-Old font size restored.

Version [b]2016.2.24[/b]:
-Fixed referenced techs for AoE and RoR.
-Improved layout all around.

Version [b]2016.2.21[/b]:
-Text scaling should work better now.
-SLP view controls reactivated.

Version [b]2016.2.18[/b]:
-Refreshing a list no longer resets its selection.
-Improved search algorithm.

Version [b]2016.2.14[/b]:
-Unit search filters work again.

Version [b]2016.2.10[/b]:
-SLP view improved.
-Game path can be read from registry.
-Pressing control + 1...4 changes focus between editors.
-Civilization resource names are customizable via text file.
-Added a button to sync save paths with open paths.

Version [b]2016.1.24[/b]:
-New lines handled properly when editing language DLL files.
-User interface fixes and improvements.

Version [b]2016.1.20[/b]:
-Multiple renames in the user interface of units and techs.
-SLP based terrains can be shown in the SLP view.

Version [b]2015.12.27[/b]:
-Unit size shapes can be viewed in the SLP view.
