@@ -162,10 +162,10 @@ void AGE_Frame::InitResearches(bool all)
         FillLists(ResearchComboBoxList, research_names);
         if(GenieVersion >= genie::GV_AoKA)
         {
-            FillItemCombo(TechTrees_Ages_Items, true);
-            FillItemCombo(TechTrees_Buildings_Items, true);
-            FillItemCombo(TechTrees_Units_Items, true);
-            FillItemCombo(TechTrees_Researches_Items, true);
+            TechTrees_Ages_Items.ItemCombo->Flash();
+            TechTrees_Buildings_Items.ItemCombo->Flash();
+            TechTrees_Units_Items.ItemCombo->Flash();
+            TechTrees_Researches_Items.ItemCombo->Flash();
         }
     }
 
